# access-table-dioxus

./: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  tailwind.css
.github/: copilot-instructions.md
assets/: tailwind.css
docs/: 404.html
docs/assets/: dioxus-test-36ca3df561cefe4c.js  dioxus-test-41d22a451b7f8ed1.js  dioxus-test_bg-3dd2660d873fc51.wasm  dioxus-test_bg-d6df7f99c14ce680.wasm  tailwind-2b35d1dda37ca089.css
src/: components.rs  document_keydown.rs  filedropper.rs  lib.rs  main.rs  table.rs  user.rs
src/components/: filedropper.rs  mod.rs  table.rs
src/components/table/: mod.rs  selection.rs  table.rs
